--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<div style="text-align:left">
   <h1>{{ title }}</h1>
   <app-applications></app-applications>
 </div>
