Final de 7, Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
+<!-- @aaa sin usar router, se indican los componentes a cargar 
 <div style="text-align:left">
   <h1>{{ title }}</h1>
   <app-applications></app-applications>
-</div>
+  <app-messages></app-messages>
+</div> -->
+
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/applications">Applications</a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
