--- a/src/app/applications/applications.component.css
+++ b/src/app/applications/applications.component.css
@@ -46,3 +46,15 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+
+.example-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
