--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
+
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"; /*  @aaa  Angular Material*/
+
+
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
