Tabla con ordenacion y filtrado

--- a/src/app/applications/applications.component.css
+++ b/src/app/applications/applications.component.css
@@ -1,37 +1,39 @@
 /* ApplicationComponent's private CSS styles */
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
-.applications {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-.applications li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-.applications li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
-}
-.applications li:hover {
-  color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
-}
-.applications .text {
-  position: relative;
-  top: -3px;
-}
+
+/* .selected { */
+/*   background-color: #CFD8DC !important; */
+/*   color: white; */
+/* } */
+/* .applications { */
+/*   margin: 0 0 2em 0; */
+/*   list-style-type: none; */
+/*   padding: 0; */
+/*   width: 15em; */
+/* } */
+/* .applications li { */
+/*   cursor: pointer; */
+/*   position: relative; */
+/*   left: 0; */
+/*   background-color: #EEE; */
+/*   margin: .5em; */
+/*   padding: .3em 0; */
+/*   height: 1.6em; */
+/*   border-radius: 4px; */
+/* } */
+/* .applications li.selected:hover { */
+/*   background-color: #BBD8DC !important; */
+/*   color: white; */
+/* } */
+/* .applications li:hover { */
+/*   color: #607D8B; */
+/*   background-color: #DDD; */
+/*   left: .1em; */
+/* } */
+/* .applications .text { */
+/*   position: relative; */
+/*   top: -3px; */
+/* } */
+
 .applications .badge {
   display: inline-block;
   font-size: small;
@@ -47,14 +49,28 @@
   border-radius: 4px 0 0 4px;
 }
 
-
+/* Structure */
 .example-container {
   display: flex;
   flex-direction: column;
   min-width: 300px;
 }
 
+.example-header {
+  min-height: 64px;
+  padding: 8px 24px 0;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
 .mat-table {
   overflow: auto;
   max-height: 500px;
+}
+
+.mat-column-select {
+  overflow: initial;
 }
