--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -1,4 +1,4 @@
-<h2>Application List</h2>
+<h2>SAST Light Applications List</h2>
 
 <!-- <ul class="applications"> -->
 <!-- 	<li *ngFor="let item of applications"> -->
@@ -8,39 +8,63 @@
 <!-- 	</li> -->
 <!-- </ul> -->
 
-<div class="example-container mat-elevation-z8">
+<div class="example-container mat-elevation-z8" matSort>
+
 	<div class="spinner-container" *ngIf="applications.length<=0">
-        <mat-spinner></mat-spinner>
-    </div>
-  <mat-table #table [dataSource]="dataSource">
+		<mat-spinner></mat-spinner>
+	</div>
 
-    <!-- id Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> Id. </mat-header-cell>
-      <mat-cell *matCellDef="let app"> {{app.id}} </mat-cell>
-    </ng-container>
+	<div class="example-header">
+		<mat-form-field> <input matInput
+			(keyup)="applyFilter($event.target.value)" placeholder="Filter">
+		</mat-form-field>
+	</div>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let app"> {{app.name}} </mat-cell>
-    </ng-container>
-    
-    <!-- Descriptcion Column -->
-    <ng-container matColumnDef="descriptcion">
-      <mat-header-cell *matHeaderCellDef> Desc. </mat-header-cell>
-      <mat-cell *matCellDef="let app"> {{app.description}} </mat-cell>
-    </ng-container>
-    
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)" >
-    
-    </mat-row>
-  </mat-table>
-   <mat-paginator #paginator
-                 [pageSize]="5"
-                 [pageSizeOptions]="[5, 10, 20]"
-                 [showFirstLastButtons]="false">
-  </mat-paginator>
+	<mat-table #table [dataSource]="dataSource">
+
+	<!-- Checkbox Column -->
+	<ng-container matColumnDef="select">
+		<mat-header-cell *matHeaderCellDef>
+		  <mat-checkbox (change)="$event ? masterToggle() : null"
+		                [checked]="selection.hasValue() && isAllSelected()"
+		                [indeterminate]="selection.hasValue() && !isAllSelected()">
+		  </mat-checkbox>
+		</mat-header-cell>
+		<mat-cell *matCellDef="let row">
+		  <mat-checkbox (click)="$event.stopPropagation()"
+		                (change)="$event ? selection.toggle(row) : null"
+		                [checked]="selection.isSelected(row)">
+		  </mat-checkbox>
+		</mat-cell>
+	</ng-container>
+		<!-- id Column -->
+		<ng-container matColumnDef="id">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header> Id. </mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.id}} </mat-cell>
+		</ng-container>
+		
+		<!-- Name Column -->
+		<ng-container matColumnDef="name">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.name}} </mat-cell>
+		</ng-container>
+		
+		<!-- Descriptcion Column -->
+		<ng-container matColumnDef="descriptcion">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header> Desc. </mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.description}} </mat-cell>
+		</ng-container>
+		
+		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+		
+		<mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)" >
+		</mat-row>
+		
+	</mat-table>
+	
+	<mat-paginator #paginator
+	               [pageSize]="5"
+	               [pageSizeOptions]="[5, 10, 20]"
+	               [showFirstLastButtons]="false">
+	</mat-paginator>
 </div>
