--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,23 @@
 <div>
+	<div class="grid grid-pad">
+		    
+		<h2>Hi {{currentUser.firstName}}!</h2>
+		<h3>All registered users:</h3>
+		<ul>
+			<li *ngFor="let user of users">            {{user.username}}
+				({{user.firstName}} {{user.lastName}})             - <a
+				(click)="deleteUser(user._id)">Delete</a>         
+			</li>
+		</ul>
+		    
+		<p>
+			<a [routerLink]="['/login']">Logout</a>
+		</p>
+	</div>
+	
 	<h2>SAST Light Applications List</h2>
 	<div class="grid grid-pad">
-<!-- 	   <a *ngFor="let app of applications" class="col-1-4" routerLink="/detail/{{app.id}}"> -->
-			<div *ngFor="let app of applications" class="col-1-4">
-<!-- 			<div class="module application"> -->
-<!-- 				<h4>{{app.name}}</h4> -->
-<!-- 				{{app.id}}<br> -->
-<!-- 				{{app.description}} -->
-<!-- 			</div> -->
-			
+		<div *ngFor="let app of applications" class="col-1-4">
 			<mat-card class="example-card"> 
 				<mat-card-header>
 					<div mat-card-avatar class="example-header-image">
@@ -16,22 +25,16 @@
 					<mat-card-title>{{app.name}}</mat-card-title> 
 					<mat-card-subtitle>{{app.description}}</mat-card-subtitle> 
 				</mat-card-header>
-<!-- 				<img mat-card-image -->
-<!-- 					src="https://material.angular.io/assets/img/examples/shiba2.jpg" -->
-<!-- 					alt="Photo of Homer">  -->
 				<mat-card-content>
 					<p>
 						Lorem Ipsum...
 					</p>
-				</mat-card-content>
-				<mat-card-actions>
-					<button mat-button>Details</button>
-					<button mat-button>Releasses</button>
-				</mat-card-actions> 
-			</mat-card>
-
+				</mat-card-content> <mat-card-actions>
+			<button mat-button routerLink="/detail/{{app.id}}">Details</button>
+			<button mat-button>Releasses</button>
+			</mat-card-actions> </mat-card>
 <!-- 		</a> -->
 		</div>
 	</div>
-	
+
 </div>
