Modificado panel de login y cambios de estructura en la apliciación

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,3 +43,11 @@ nav  {
   flex: 1 1 auto;
 }
 
+.app-toolbar {
+	padding: 5px 10px;
+	text-decoration: none;
+	margin-top: 10px;
+	display: inline-block;
+
+	border-radius: 4px;
+}
