--- a/src/app/admin-user/admin-user.component.html
+++ b/src/app/admin-user/admin-user.component.html
@@ -1,3 +1,15 @@
-<p>
-  admin-user works!
-</p>
+<div>
+	<div class="grid grid-pad">
+		<h3>All registered users:</h3>
+		<ul>
+			<li *ngFor="let user of users">            {{user.username}}
+				({{user.firstName}} {{user.lastName}})             - <a
+				(click)="deleteUser(user._id)">Delete</a>         
+			</li>
+		</ul>
+		    
+		<p>
+			<a [routerLink]="['/login']">Logout</a>
+		</p>
+	</div>
+</div>
