--- a/src/styles.css
+++ b/src/styles.css
@@ -1,29 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "./../node_modules/font-awesome/css/font-awesome.min.css";
+@import "./../node_modules/primeng/resources/themes/omega/theme.css";
+@import "./../node_modules/primeng/resources/primeng.min.css";
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css"; /*  @aaa  Angular Material*/
+ 
+  
+  
 
-
-
+	/*  @aaa  Angular Material*/
 h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+	color: #369;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 250%;
 }
+
 h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
+	color: #444;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: lighter;
 }
+
 body {
-  margin: 2em;
+	margin: 2em;
 }
+
 body, input[text], button {
-  color: #888;
-  font-family: Cambria, Georgia;
+	color: #888;
+	font-family: Cambria, Georgia;
 }
 /* everywhere else */
 * {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
