Pre Customización del diagrama

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,14 +17,17 @@
 
  
 <nav>
-	<mat-chip-list>
-	    <mat-chip color="accent" selected="true" routerLink="/dashboard">Dashboard</mat-chip>
-		<mat-chip color="accent" selected="false" routerLink="/applications">Applications</mat-chip>
-		<mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
-	</mat-chip-list>
+    <mat-chip-list>
+        <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip>
+        <mat-chip color="accent" selected="false" routerLink="/applications">Applicationssss</mat-chip>
+        <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
+    </mat-chip-list>
 </nav>
 
-
+<!-- <button type="text" routerLink="/dashboard" pButton label="Dashboard"></button> -->
+<!-- <button type="text" routerLink="/applications" pButton label="Applications"></button> -->
+<!-- <button type="text" routerLink="/srequest" pButton label="Request"></button> -->
+							
 
 <!-- <div class="jumbotron"> -->
 <!--     <div class="container"> -->
