--- a/src/app/_sastlight-client-request/new-sastlight-client-request.component.html
+++ b/src/app/_sastlight-client-request/new-sastlight-client-request.component.html
@@ -34,26 +34,227 @@
     
 <h3 class="first">New <b>SAST</b> Light Service Request Excel File:</h3> 
 <!-- multiple="multiple"    accept="image/*"  application/vnd.ms-excel-->
-<p-fileUpload name="SASTLightRequestFile[]"  
-	chooseLabel="Select or drag a file" 
-	uploadLabel="Upload Label" 
-	url="http://localhost:4000/uploadFile"  
-	(onUpload)="onUpload($event)"  
-	(onBeforeSend)="onBeforeSend($event)" 
-	(onSuccess)="onSuccess($event)" 
-	(uploadHandler)="uploadHandler($event)"    
-	accept="application/vnd.ms-excel"
-	maxFileSize="10000000">
-         
-	    <ng-template pTemplate="toolbar">
-	   		<div>Toolbar?</div>
-	   	</ng-template>  
-   	
+<p-fileUpload 
+	name="SASTLightRequestFile[]"
+	chooseLabel="Select or drag a file"
+	uploadLabel="Upload"
+	url="http://localhost:4000/uploadFile"
+	(onUpload)="onUpload($event)"
+	(onBeforeSend)="onBeforeSend($event)"
+	accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+	maxFileSize="1000000">
 	    <ng-template pTemplate="content">
 	    	<div>
-		        <ul *ngIf="uploadedFiles.length">
-		            <li *ngFor="let file of uploadedFiles">{{file.fileConf.curName}} [{{file.name}}] - {{file.size}} bytes</li>
-		        </ul>
+<!-- 		        <ul *ngIf="uploadedFiles.length"> -->
+<!-- 		            <li *ngFor="let file of uploadedFiles"> -->
+<!-- 		            	{{file.fileConf.curName}} [{{file.name}}] - {{file.size}} bytes -->
+<!-- 		            	{{file.parsed}} -->
+<!-- 		            </li> -->
+<!-- 		        </ul> -->
+				<div *ngIf="uploadedFile">
+					<p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425">
+					</p-confirmDialog>
+				
+					<mat-card class="example-card"> 
+						<mat-card-header>
+							<mat-card-title><b>{{uploadedFile.fileConf.curName}}</b> -> [{{uploadedFile.name}}]</mat-card-title> 
+							<mat-card-subtitle>{{uploadedFile.size}} bytes</mat-card-subtitle> 
+						</mat-card-header>
+						<mat-card-content>
+							<p-tabView>
+<!-- 							    <p-tabPanel header="Global (Requester)"> -->
+<!-- 							       <form  #f="ngForm" novalidate class="example-form"> -->
+<!-- 										 Provider -->
+<!-- 										<mat-form-field class="form-app-data-input"> -->
+<!-- 											<input placeholder="Provider"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_PROV" [ngModelOptions]="{standalone: true}" disabled matInput type="text"> -->
+<!-- 										</mat-form-field> -->
+<!-- 									</form> -->
+<!-- 							    </p-tabPanel> -->
+							    <p-tabPanel header="Lab Project Manager">
+                                                                    <form  #f="ngForm" novalidate class="example-form">
+                                                                        <!--  PM User ID <- PM UID -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="Project Manager UID"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_UID" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <!--  Provider -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="Provider"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_PROV" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <br>									
+                                                                        <!--  PM Isban eMail 	<- 	PM_EMA -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="PM Isban eMail"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_EMA" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <br>
+                                                                        <!--  PM Firstname	<- 	PM_FN -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="PM Firstname"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_FN" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <br>
+                                                                        <!--  PM Lastname		<-	PM_LN -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="PM Lastname"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_LN" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <br>
+                                                                        <!--  Bussines Area	<-	PM_BA -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="Bussines Area"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_BA" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                        <br>
+                                                                        <!--  Functional Domain	<-	PM_FC -->
+                                                                        <mat-form-field class="form-app-data-input">
+                                                                                <input placeholder="Functional Domain"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.PM_FC" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+                                                                        </mat-form-field>
+                                                                    </form>
+							    </p-tabPanel>
+							    <p-tabPanel header="Project">
+							        <form  #f="ngForm" novalidate class="example-form">
+							        	<!--  Application Name	<-	P_APP -->
+										<mat-form-field class="form-app-data-input">
+											<input placeholder="Application Name"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_APP" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+							        	<!--  Project 			<-	P_PRO -->
+										<mat-form-field class="form-app-data-input">
+											<input placeholder="Project"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_PRO" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+							        	<!--  Project Description	<-	P_DES -->
+										<mat-form-field class="form-app-data-input">
+											<input placeholder="Project Description"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_DES" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+							        	<!--  Client				<-	P_CLI -->
+										<mat-form-field class="form-app-data-input">
+											<input placeholder="Client"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_CLI" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+									</form>
+							    </p-tabPanel>
+							    <p-tabPanel header="Technologies">
+							        <form  #f="ngForm" novalidate class="example-form">
+							        	<!--  Num Tec	<-	P_NUMTEC -->
+										<mat-form-field class="form-app-data-input">
+											<input placeholder="Num. of Tech."  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_NUMTEC" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+										<mat-form-field class="form-app-data-input" *ngIf="uploadedFile.parsed.P_NUMTEC>0">
+											<input placeholder="Tech. 1"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_T1" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+										<mat-form-field class="form-app-data-input" *ngIf="uploadedFile.parsed.P_NUMTEC>1">
+											<input placeholder="Tech. 2"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_T2" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+										<mat-form-field class="form-app-data-input" *ngIf="uploadedFile.parsed.P_NUMTEC>2">
+											<input placeholder="Tech. 3"  maxLength="100"  [(ngModel)]="uploadedFile.parsed.P_T3" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+										</mat-form-field>
+										<br>
+										
+							        	
+									</form>
+							    </p-tabPanel>
+							    <p-tabPanel header="Factories">
+							    <!-- Formulario	<-	FACTORY_DATA  -->
+							    <div  *ngIf="uploadedFile.parsed.FACTORY_DATA">
+								        <form  #f="ngForm" novalidate class="example-form">
+											<div *ngFor="let so of uploadedFile.parsed.soData">	
+												<p-fieldset legend="{{so.F_NAM}}" [toggleable]="true" [collapsed]="true" class="group-of-fields">
+													<!-- Factory Name	<-	F_NAM  -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="Factory Name"  maxLength="100"  [(ngModel)]="so.F_NAM" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													<!-- OS ID	<-	F_OSI  -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="SO Id"  maxLength="100"  [(ngModel)]="so.F_OSI" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													<!-- OS Tech	<-	F_OST -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="SO Technology #"  maxLength="100"  [(ngModel)]="so.F_NAM" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													
+												</p-fieldset>	
+											</div>
+										</form> 
+									</div>
+									<div  *ngIf="! uploadedFile.parsed.FACTORY_DATA">
+										No Factories Data
+									</div>
+							    </p-tabPanel>
+							    <p-tabPanel header="Additional Lab Users">
+							    <!-- Formulario	<-	LABUSER_DATA  -->
+							    	<div *ngIf="uploadedFile.parsed.LABUSER_DATA">
+								        <form  #f="ngForm" novalidate class="example-form">
+											<div *ngFor="let lab of uploadedFile.parsed.labUsersData">	
+												<p-fieldset legend="{{lab.LAB_UFN + ' ' + lab.LAB_USN}}" [toggleable]="true" [collapsed]="true" class="group-of-fields">
+													<!-- ID			<-	LAB_UID  -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="ID"  maxLength="100"  [(ngModel)]="lab.LAB_UID" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													<!-- Mail		<-	LAB_EMA -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="Mail"  maxLength="100"  [(ngModel)]="lab.LAB_EMA" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													<!-- Fisrtname	<-	LAB_UFN	-->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="Fisrtname"  maxLength="100"  [(ngModel)]="lab.LAB_UFN" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+													<br>
+													<!-- Secondname	<-	LAB_USN -->
+													<mat-form-field class="form-app-data-input">
+														<input placeholder="Secondname"  maxLength="100"  [(ngModel)]="lab.LAB_USN" [ngModelOptions]="{standalone: true}" disabled matInput type="text">
+													</mat-form-field>
+												</p-fieldset>	
+											</div>
+										</form> 
+									</div>    
+							    </p-tabPanel>
+							    <p-tabPanel header="Raw File Data">
+							        {{uploadedFile.parsedStr}}
+							    </p-tabPanel>
+							</p-tabView>
+						</mat-card-content> 
+						<mat-card-actions>
+							<button type="text" (click)="confirmCreate()" pButton icon="fa-check" label="Create Infra"></button>
+							<button type="text" (click)="confirmDelete()" pButton icon="fa-check" label="Delete Temporal File"></button>
+							<button type="text" (click)="updateGraphData()" pButton icon="fa-check" label="Test Chart"></button>
+<!-- 							<button mat-button>Create Infra for Application</button> -->
+<!-- 							<button mat-button>Delete Temporal File</button> -->
+						</mat-card-actions>
+					</mat-card>
+
+					<mat-card class="example-card"> 
+						<mat-card-header>
+							<mat-card-title>
+								Info Chart:
+							</mat-card-title>
+						</mat-card-header>
+						<mat-card-content>
+							<p-organizationChart 
+									[value]="data1"
+									selectionMode="single"
+									[(selection)]="selectedNode"
+									(onNodeSelect)="onNodeSelect($event)"
+									styleClass="company">
+							    <ng-template let-node pTemplate="person">
+							        <div class="node-header ui-corner-top">{{node.label}}</div>
+							        <div class="node-content">
+							           <img src="assets/showcase/images/demo/organization/{{node.data.avatar}}" width="32">
+							           <div>{{node.data.name}}</div>
+							        </div>
+							    </ng-template>
+							    <ng-template let-node pTemplate="department">
+							        {{node.label}}
+							    </ng-template>
+							</p-organizationChart>
+							
+						</mat-card-content> 
+					</mat-card>
+		        </div>
 			</div>
-	    </ng-template>        
+	    </ng-template>
 </p-fileUpload>
