--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,4 @@
-/* AppComponent's private CSS styles */
-/* h1 { */
-/* 	font-size: 1.2em; */
-/* 	color: #999; */
-/* 	margin-bottom: 0; */
-/* } */
 
-/* h2 { */
-/* 	font-size: 2em; */
-/* 	margin-top: 0; */
-/* 	padding-top: 0; */
-/* } */
 
 nav  {
 	padding: 5px 10px;
@@ -20,18 +9,18 @@ nav  {
 	border-radius: 4px;
 }
 
-/* nav a:visited, a:link { */
-/* 	color: #607D8B; */
-/* } */
+nav a:visited, a:link {
+	color: #607D8B;
+}
 
-/* nav a:hover { */
-/* 	color: #039be5; */
-/* 	background-color: #CFD8DC; */
-/* } */
+nav a:hover {
+	color: #039be5;
+	background-color: #CFD8DC;
+}
 
-/* nav a.active { */
-/* 	color: #039be5; */
-/* } */
+nav a.active {
+	color: #039be5;
+}
 
 
 /* MatToolbar */
