--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,3 @@
-/* DashboardComponent's private CSS styles */
 [class*='col-'] {
 	float: left;
 	padding-right: 20px;
@@ -79,7 +78,7 @@ a {
 
 /* card styles */
 .example-card {
-  max-width: 400px;
+  min-width: 400px;
   max-width: 400px;
 }
 
