--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,18 @@
+/* AppComponent's private CSS styles */
+/* h1 { */
+/* 	font-size: 1.2em; */
+/* 	color: #999; */
+/* 	margin-bottom: 0; */
+/* } */
 
+/* h2 { */
+/* 	font-size: 2em; */
+/* 	margin-top: 0; */
+/* 	padding-top: 0; */
+/* } */
 
-nav  {
-	padding: 5px 10px;
+.nav  {
+/* 	padding: 5px 10px; */
 	text-decoration: none;
 	margin-top: 10px;
 	display: inline-block;
@@ -9,18 +20,6 @@ nav  {
 	border-radius: 4px;
 }
 
-nav a:visited, a:link {
-	color: #607D8B;
-}
-
-nav a:hover {
-	color: #039be5;
-	background-color: #CFD8DC;
-}
-
-nav a.active {
-	color: #039be5;
-}
 
 
 /* MatToolbar */
@@ -33,10 +32,10 @@ nav a.active {
 }
 
 .app-toolbar {
-	padding: 5px 10px;
+/* 	padding: 5px 10px; */
 	text-decoration: none;
-	margin-top: 10px;
+/* 	margin-top: 10px; */
 	display: inline-block;
-
-	border-radius: 4px;
+	background-color : #E40014;
+	border-radius: 20px;  /*4px;*/
 }
