--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,14 +15,21 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
+<div class="nav">
+	<mat-chip-list>
+	    <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip>
+	    <mat-chip color="accent" selected="false" routerLink="/applications">Applicationssss</mat-chip>
+	    <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
+	</mat-chip-list>
+</div>    
  
-<nav>
-    <mat-chip-list>
-        <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip>
-        <mat-chip color="accent" selected="false" routerLink="/applications">Applicationssss</mat-chip>
-        <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
-    </mat-chip-list>
-</nav>
+<!-- <nav> -->
+<!--   <mat-chip-list> -->
+<!--         <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip> -->
+<!--         <mat-chip color="accent" selected="false" routerLink="/applications">Applicationssss</mat-chip> -->
+<!--         <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip> -->
+<!--     </mat-chip-list>   -->
+<!-- </nav> -->
 
 <!-- <button type="text" routerLink="/dashboard" pButton label="Dashboard"></button> -->
 <!-- <button type="text" routerLink="/applications" pButton label="Applications"></button> -->
